feat: add delete secret key endpoint
